--- a/styles/pages/careers.css
+++ b/styles/pages/careers.css
@@ -51,49 +51,9 @@ section#pg-careers {
   }
 
   select,
-  input[type="text"],
-  input[type="email"],
-  input[type="url"],
+  input,
   textarea {
     width: 100%;
-    padding: var(--sm);
-    background: transparent;
-    border: 1px solid var(--white-30);
-    color: var(--text);
-    font-family: var(--ubuntu);
-    font-size: 1rem;
-    transition: border-color var(--fast);
-  }
-
-  select {
-    cursor: pointer;
-    appearance: none;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' viewBox='0 0 12 12'%3E%3Cpath fill='white' d='M6 9L1 4h10z'/%3E%3C/svg%3E");
-    background-repeat: no-repeat;
-    background-position: right var(--sm) center;
-    padding-right: 2.5rem;
-  }
-
-  select option {
-    background: var(--black);
-    color: var(--text);
-  }
-
-  input::placeholder,
-  textarea::placeholder {
-    color: var(--text-3);
-  }
-
-  input:focus,
-  textarea:focus,
-  select:focus {
-    outline: none;
-    border-color: var(--accent);
-  }
-
-  textarea {
-    resize: vertical;
-    min-height: 150px;
   }
 
   #job-descriptions {
