--- a/styles/pages/products/product.css
+++ b/styles/pages/products/product.css
@@ -10,6 +10,7 @@ section#pg-product-detail {
   max-width: 1600px;
   margin: 0 auto;
   padding-top: var(--2xl);
+  padding-bottom: var(--2xl);
 }
 
 /* Mobile first - natural stacking */
@@ -39,6 +40,14 @@ section#pg-product-detail {
   display: block;
 }
 
+.product-image .caption {
+  font-size: var(--small);
+  color: var(--text-3);
+  margin-top: var(--xs);
+  font-style: italic;
+  text-align: center;
+}
+
 /* Content styling */
 .product-content p {
   margin-bottom: var(--lg);
@@ -52,7 +61,7 @@ section#pg-product-detail {
 
 /* Downloads */
 .downloads {
-  margin: var(--xl) 0;
+  margin: var(--lg) 0;
   display: flex;
   flex-direction: column;
   gap: var(--md);
@@ -85,7 +94,7 @@ section#pg-product-detail {
 
 /* Contact info */
 .contact-info {
-  margin: var(--xl) 0;
+  margin: var(--lg) 0;
 }
 
 .contact-info h2 {
@@ -101,14 +110,52 @@ section#pg-product-detail {
 .product-content .button {
   display: block;
   text-align: center;
-  margin-top: var(--xl);
+  margin-top: 0;
+  font-size: var(--medium);
 }
 
-/* Desktop layout - 50/50 side by side */
-@media (min-width: 900px) {
+/* Medium desktop - wrapped/float layout */
+@media (min-width: 900px) and (max-width: 1399px) {
+  .product-wrapper {
+    display: block;
+    max-width: 1200px;
+    padding-left: var(--xl);
+    padding-right: var(--xl);
+  }
+
+  .product-image {
+    float: right;
+    width: 45%;
+    padding-left: var(--xl);
+    margin-bottom: var(--lg);
+  }
+
+  .product-image img {
+    width: 100%;
+    height: auto;
+    border-radius: var(--radius);
+  }
+
+  .product-header {
+    padding-top: 0;
+    padding-bottom: 0;
+    margin-bottom: var(--lg);
+  }
+
+  .product-content {
+    padding-top: 0;
+  }
+
+  .product-content .button {
+    display: inline-block;
+  }
+}
+
+/* Large desktop - grid layout */
+@media (min-width: 1400px) {
   .product-wrapper {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1.25fr;
     grid-template-rows: auto auto;
   }
 
@@ -122,6 +169,7 @@ section#pg-product-detail {
   .product-image img {
     width: 100%;
     height: auto;
+    border-radius: var(--radius);
   }
 
   .product-header {
@@ -134,6 +182,10 @@ section#pg-product-detail {
     grid-column: 2;
     grid-row: 2;
     padding: var(--lg) var(--2xl) var(--2xl) var(--2xl);
+  }
+
+  .product-content .button {
+    display: inline-block;
   }
 }
 
