--- a/styles/pages/products/index.css
+++ b/styles/pages/products/index.css
@@ -41,6 +41,10 @@ section#pg-products {
     &:hover * {
       text-decoration: none;
     }
+
+    &:hover .product-image img {
+      transform: scale(1.03);
+    }
   }
 
   .product-image {
@@ -56,6 +60,7 @@ section#pg-products {
       width: 100%;
       height: 100%;
       object-fit: cover;
+      transition: transform var(--normal);
     }
   }
 
