--- a/styles/pages/samples.css
+++ b/styles/pages/samples.css
@@ -5,32 +5,31 @@ section#pg-samples {
 }
 
 section#pg-samples .sample-image {
-  text-align: left;
-  margin: var(--xl) 0;
+  margin: var(--lg) 0;
 }
 
 section#pg-samples .sample-image img {
-  max-width: 100%;
+  width: 100%;
+  max-width: 1200px;
   height: auto;
-  max-height: 400px;
-  border-radius: 4px;
+  max-height: 500px;
+  object-fit: cover;
+  display: block;
+  margin: 0 auto;
+  border-radius: var(--radius);
 }
 
 
 /* Responsive */
 @media (max-width: 768px) {
-  section#pg-samples .sample-image {
-    margin: var(--lg) 0;
-  }
-
   section#pg-samples .sample-image img {
-    max-height: 300px;
+    max-height: 400px;
   }
 }
 
 @media (max-width: 480px) {
   section#pg-samples .sample-image img {
-    max-height: 250px;
+    max-height: 300px;
   }
 }
 
