--- a/styles/layouts/standard.css
+++ b/styles/layouts/standard.css
@@ -43,8 +43,8 @@ body#ly-standard .grid-container > * {
 /* Opt-in to full width for direct children only */
 body#ly-standard .grid-container > .width-full {
   grid-column: full;
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
 }
 
 /* Container utilities */
